css/style.css
.card {
	border-left: 30px solid #6BC1D3;
	margin: 10px 0;
	background-color: #F7F8FF;
	padding: 1.5rem 1.5rem 0 1.5rem;
}

.links li {
	display: inline;
	padding: 3px;
}

.section-panel {
    margin: 2rem 1rem 0 1rem;
    padding: 2rem;
    border: 2px solid #222;
    border-left: 8px solid #222;
}

.section-panel h1,h2,h3,h4 {
    margin-top: 0;
}

.mailinglists__list, 
.mailinglists__list li {
	display: block;
	border: none;
	margin: 5 0 0 0;
	padding: 0;
	list-style-type: none;
}

.mailinglists__list li a {
	padding: 0.5em 1em;
}

.mailinglists__list li {
	text-align: center
}

.mailinglists__list hr {
	margin: 10px 0 10px 0;
	width: 80%;
	margin-left: auto;
	margin-right: auto;
}

#mailinglists__map {
	text-align: right;
}

#events {
	border-color: #00653E;
}

#rolodex {
	border-color: #6BC1D3;
}

#donate {
	border-color: #FFC20E;
}

#career {
	border-color: #7B5AA6;
}

#mailinglists {
	border-color: #E31D3C;
}

#olinalumnicouncil {
	border-color: #BEBE3F;
}

